Fixed styling bug for lists in readable content, fixed an structured data bug within the related posts element

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -109,7 +109,7 @@
                 max-width: @content;
             }
             ol, ul {
-                margin-left: @space;
+                padding-left: @space;
             }
             blockquote p {
                 margin: 0;
